Events page card alignment fixes

--- a/src/app/events/event-card/event-card.component.scss
+++ b/src/app/events/event-card/event-card.component.scss
@@ -6,12 +6,12 @@
   // background-color: #2e375a;
   cursor: pointer;
   max-height: 260px;
-  max-width: 395px;
+  max-width: 343px;
   width: 100%;
   padding: 15px 25px;
   color: #1c1c1c;
   border-radius: 15px;
-  margin: 0px 40px 25px 0px;
+  margin: 0px 0px 25px 0px;
   // display: inline-grid;
   text-align: left;
   border: 1px solid #e8edff;
@@ -30,6 +30,18 @@
   &.night-rider {
     background-color: #2e2e2e;
   }
+}
+.colby3 {
+  gap: 25px !important;
+}
+.location-icon {
+  margin-top: 5px;
+}
+  .conference-header {
+    // border-left: 7px solid #fff;
+    // padding-left: 20px;
+    // margin-bottom: 20px;
+  }
   .date-icon {
     margin-right: 10px;
   }
@@ -42,7 +54,7 @@
     line-height: 26px;
   }
   .description {
-    font-size: 16px;
+    font-size: 14px;
     font-family: $primary-font-regular;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
@@ -56,10 +68,73 @@
       min-height: auto;
     }
   }
-}
-.venue-details {
-  font-size: 24px;
-  font-family: $primary-font-medium;
-  margin-bottom: 20px;
-}
 
+.venue-details {
+  font-size: 14px;
+  font-family: $primary-font-medium;
+  color: #1C1C1C;
+  // margin-bottom: 20px;
+}
+.section-title.skeleton-loader {
+  h2 {
+    height: 30px;
+    width: 40%;
+    border-radius: 4px;
+  }
+}
+.event-skeleton {
+  background: #fff !important;
+  .conference-header {
+    border-bottom: 1px solid #e8edff;
+  }
+  .title-1 {
+    height: 20px;
+    width: 90%;
+    margin-bottom: 10px;
+  }
+  .title-2 {
+    height: 20px;
+    width: 40%;
+    margin-bottom: 20px;
+  }
+  .skeleton-description {
+    height: 16px;
+    margin-bottom: 10px;
+  }
+  .bottom {
+    .event-icon {
+      height: 24px;
+      width: 24px;
+      border-radius: 50%;
+    }
+    .event-date {
+      height: 16px;
+      width: 80%;
+    }
+  }
+  .loading {
+    border-radius: 2px;
+  }
+}
+.skill-studio-page.p-main {
+  padding-top: 73px;
+}
+.aihub-banner {
+  margin-top: 0 !important;
+  h3 {
+    font-family: $primary-font-regular;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .aihub-banner.events {
+    background: url('../../../assets/images/events/events-banner-bg.png') no-repeat, url('../../../assets/images/events/events-banner.png') -245px 0px no-repeat;
+    background-size: cover;
+    height: 315px !important;
+    background-blend-mode: color-burn;
+  }
+  .aihub-banner {
+    h3 {
+      font-size: 18px !important;
+    }
+  }
+}
